--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/bootstrap-for-ember-rails/bootstrap-for-ember"]
 	path = lib/bootstrap-for-ember-rails/bootstrap-for-ember
-	url = git://github.com/cjc343/bootstrap-for-ember.git
+	url = https://github.com/bandzoogle/bootstrap-for-ember-old.git
